--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <section class="3d-scanning">
     <div class=" conteiner hero__3d-scanning">
-        <h1>3D СКАНУВАННЯ</h1>
+        <h1 class="hero-scan">3D СКАНУВАННЯ</h1>
         <P class="skan">Процес створення 3D моделі по вже існуючій деталі може займати тривалий час. У деяких випадках
             процесс може займати багато годин. Але якщо виріб має складну геометрію і криволінійні поверхні, то велика
             ймовірність що перенести об'єкт в тривимірну цифрову модель може бути неможливо.</P>
@@ -20,16 +20,16 @@
         <P class="skan">Якщо потрібно сканування деталей з максимальною точністю, то використовуються спеціальні
             технології і постобробка отриманих сканів фахівцем.</P>
 
-        <img class="hero__img-scanning" src="" alt="">
+        <img class="hero__img-scanning" src="./src/image/scanning/hero-scanning-desk.jpg" alt="">
 
 
     </div>
-    <div>
-        <h2>ПРОЦЕС 3D СКАНУВАННЯ</h2>
+    <div class="process-scan">
+        <h2 class="">ПРОЦЕС 3D СКАНУВАННЯ</h2>
         <ul class="list ">
             <li class="process">
 
-                <img class="img-scanning" src="">
+                <img class="img-scanning" src="./src/image/scanning/scan_process1-desk.jpg">
 
                 <h3>Підготовка
                     деталі
@@ -37,21 +37,21 @@
             </li>
             <li>
 
-                <img class="img-scanning" src="">
+                <img class="img-scanning" src="./src/image/scanning/scan_process3-desk.jpg">
 
                 <h3>Створення сканів
                     і їх обробка</h3>
             </li>
             <li>
 
-                <img class="img-scanning" src="">
+                <img class="img-scanning" src="./src/image/scanning/scan_process4-desk.jpg">
 
                 <h3>Перетворення
                     reverse engineering</h3>
             </li>
             <li>
 
-                <img class="img-scanning" scr="./images/scanning/scan-process2-desk.jpg">
+                <img class="img-scanning" src="./src/image/scanning/scan_process2-desk.jpg">
 
                 <h3>Підготовка моделі
                     до друку</h3>
